src/styles/custom.css
/* ... */
.teampic {
   max-height: 30rem;
   height: auto;
   width: auto;
   overflow: hidden;
}

.teambox-padding {
  padding-top: 0px;
  padding-left: 0px;
  padding-right: 0px;
  padding-bottom: 0.5em;
}

.teambox-text {
  text-align: center;
  padding-top: 0em;
  padding-left: 0.5em;
  padding-right: 0.5em;
  padding-bottom: 0em;
}

.img-container {
  position: relative;
  align-content: center;
  justify-content: center;
  justify-self: center;
}

.img-overlay-2 {
  position: absolute;
  width: auto;
  bottom: 0;
  padding-left: 8px;
  padding-right: 10px;
  font-size: 1.2rem;
  background: rgba(1000,0,0,0.9);
  border-radius: 50rem;
  border: 1px solid;
  border-color: rgba(0,0,0,1);
  color: white;
  line-height: 2;
}

.img-overlay-1 {
  position: absolute;
  width: auto;
  bottom: 14%;
  font-size: 1.5rem;
  padding-left: 8px;
  padding-right: 6px;
  background: rgba(0,0,0,0.75);
  border-radius: 50rem;
  border: 1px solid;
  border-color: rgba(0,0,0,1);
  color: white;
}

.team-box-max-width {
  max-width: 40rem;
}

.gallery-img {
  width: 30rem;
  height: 22rem;
  overflow: hidden;
}

.mw-content {
    max-width: 76rem;
}

.pv6px {
    padding-top: 6px;
    padding-bottom: 6px;
}

/* margins */
.ma-auto {
    margin: auto;
}

/* _links.css */
.link {
    text-decoration : none !important;
    transition: color .3s ease;
}

.link:link,

.link:hover   {
    transition: all .15s ease;
}

.link:focus   {
    outline: none !important;
}


.br5 {
    border-radius: 10%;
}

.white-placeholder::placeholder { /* Most modern browsers support this now. */
    color: rgba(255, 255, 255, 0.7);
}

.dark-placeholder::placeholder { /* Most modern browsers support this now. */
    color: var(--lightgrey-d2);
}

/* Text styles */
.tdn {
    text-decoration: none;
}

/* Fixing those shadows */
.box-shadow-hover {
    transition: all 0.8s ease;
}

.shadow-1 {
    box-shadow: 0 0 1px rgba(0,0,0,.06), 0 2px 6px rgba(0,0,0,.03);
}
.shadow-1.on-white {
    box-shadow: 0 0 1px rgba(0,0,0,.15), 0 2px 4px rgba(0,0,0,.04);
}
.shadow-1-hover:hover {
    box-shadow: 0 0 5px rgba(0,0,0,.02), 0 5px 22px -6px rgba(0,0,0,.1);
    transform: scale(1.02) translateY(-1.0%);
    transition: all 0.3s ease;
}
.shadow-1-hover.on-white:hover {
    box-shadow: 0 0 1px rgba(0,0,0,.15), 0 5px 22px -6px rgba(0,0,0,.1);
    transition: all 0.3s ease;
}

.shadow-2 {
    box-shadow: 0 0 5px rgba(0,0,0,.02), 0 5px 22px -8px rgba(0,0,0,.1);
}
.shadow-2.on-white {
    box-shadow: 0 0 3px rgba(0,0,0,.08), 0 5px 22px -8px rgba(0,0,0,.08);
}
.shadow-2-hover:hover {
    transform: scale(1.05) translateY(-2.5%);
    box-shadow: 0 0 1px rgba(0,0,0,.03), 0 8px 26px -4px rgba(0,0,0,.1);
    transition: all 0.3s ease;
}
.shadow-2-hover.on-white:hover {
    box-shadow: 0 0 3px rgba(0,0,0,.08), 0 8px 26px -4px rgba(0,0,0,.1);
    transition: all 0.3s ease;
}

.shadow-3 {
    box-shadow: 0 0 1px rgba(0,0,0,.03), 0 10px 32px -5px rgba(0,0,0,.1);
}
.shadow-3.on-white {
    box-shadow: 0 0 4px rgba(0,0,0,.065), 0 10px 32px -5px rgba(0,0,0,0.075);
}
.shadow-3-hover:hover {
    box-shadow: 0 0 3px rgba(0,0,0,.03), 0 17px 40px -8px rgba(0,0,0,.09);
    transform: scale(1.05) translateY(-2.5%);
    transition: all 0.3s ease;
}
.shadow-3-hover.on-white:hover {
    box-shadow: 0 0 4px rgba(0,0,0,.065), 0 17px 40px -8px rgba(0,0,0,.09);
    transition: all 0.3s ease;
}

.header-shadow {
    box-shadow: 0 0 3px rgba(0,0,0,.03), 0 3px 46px rgba(0,0,0,.07);
}

/* Test hover box */
.box-hover-test {
    transition: all 0.3s ease;
}

.box-hover-test:hover {
    box-shadow: 0 0 1px rgba(0,0,0,.03), 0 10px 32px -5px rgba(0,0,0,.1);
    transform: scale(1.0065);
}


/* Border radius */
.br5 {
    border-radius: 1.2rem;
}

.hover-underline-blue:hover {
    box-shadow: color-mod(var(--blue) a(0.5)) 0 -1px 0 inset;
    text-decoration: none;
}



/* Custom styles */
/* ----------------------------------------------------------------------- */

.navbar-container {
    flex: 1 1 auto;
    overflow: hidden;
    height: 38px;
}

.grid-icon-boxes {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(124px, auto));
    grid-auto-rows: 115px;
    grid-gap: 24px;
    grid-gap: auto;
}

.gh-nav-logo-suffix:before {
    content: "";
    position: absolute;
    top: -1px;
    left: 1px;
    display: block;
    width: 1px;
    height: 23px;
    background: #d3e4ee;
    transform: rotate(25deg);
}

.gh-nav-logo-suffix-light:before {
    color: #FFFFFF!important;
    background-color: transparent;
}

.searchfield-width {
    min-width: 16vw;
}

.content-max-width {
    max-width: calc(114rem - 24vw);
}

.titleslash-white:before {
    content: "";
    position: absolute;
    top: 0;
    left: 1px;
    display: block;
    width: 1px;
    height: 24px;
    background: rgba(255, 255, 255, 0.3);
    transform: rotate(25deg);
}

.titleslash-grey:before {
    content: "";
    position: absolute;
    top: 0;
    left: 1px;
    display: block;
    width: 1px;
    height: 24px;
    background: var(--lightgrey);
    transform: rotate(25deg);
}

.stroke-w--1-5 g,
.stroke-w--1-5 path {
    stroke-width: 1.35;
}

.prevnext-hover,
.prevnext-hover p {
    transition: all 0.8s ease;
}

/* .prevnext-hover:hover {
    box-shadow: 0 5px 25px -5px rgba(0,0,0,.1);
    border-color: color-mod(var(--whitegrey) l(+1%));
    transition: all 0.2s ease;
} */

.prevnext-hover:hover p {
    box-shadow: color-mod(var(--blue-l2) l(+10%) s(-10%)) 0 -1px 0 inset;
    transition: all 0.2s ease;
}

.bg-darkgrey-searchbar {
    background-color: color-mod(var(--midlightgrey) a(0.1));
}

.button-blue {
    background: linear-gradient(to top, color-mod(var(--blue) l(-15%) s(+16%)) 0%, color-mod(var(--blue) l(+8%) s(+6%)) 100%);
    font-weight: 500;
    border-radius: 4px;
    box-sizing: border-box;
    line-height: 1.0em;
    box-shadow: 0 4px 14px -6px color-mod(var(--blue) l(-20%) s(-15%) a(0.25));
    cursor: pointer;
    font-size: 1.3rem;
    position: relative;
}
/* ... */

